--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
         <a href="portfolio-details.html" class="btn-learn-more">Details  <i class="bx bxs-right-arrow-alt"></i></a>
 
       </div>
+      </div>
     </section><!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
